docs/DevNotes/problems.txt
problems.txt


from terminal 
(venv) laser@raspberrypi:~/Downloads/LCleanerControler-main $ python3 test_run.py --prototype --debug
Configuration updated: operation_mode=prototype, debug_level=info
PROTOTYPE MODE: Forcing hardware access regardless of I/O issues

================================================================================
Starting NooyenLaserRoom Control System in PROTOTYPE mode
Debug level: INFO
Access the interface at: http://localhost:5000 or http://<your-ip-address>:5000
Press Ctrl+C to stop the server
================================================================================

Starting application with Gunicorn on port 5000...
[2025-05-14 09:40:03 -0400] [3010] [INFO] Starting gunicorn 21.2.0
[2025-05-14 09:40:03 -0400] [3010] [INFO] Listening at: http://0.0.0.0:5000 (3010)
[2025-05-14 09:40:03 -0400] [3010] [INFO] Using worker: sync
[2025-05-14 09:40:03 -0400] [3011] [INFO] Booting worker with pid: 3011
2025-05-14 09:40:04,174 - main - WARNING - DATABASE_URL environment variable not set! Using SQLite database as fallback.
2025-05-14 09:40:04,174 - main - WARNING - For production use, please set DATABASE_URL environment variable to your PostgreSQL connection string.
2025-05-14 09:40:04,174 - main - WARNING - Example: export DATABASE_URL='postgresql://username:password@localhost/shop_suite_db'
2025-05-14 09:40:04,174 - main - INFO - Using SQLite without schema separation for development/prototype mode
2025-05-14 09:40:04,202 - sync_handler - INFO - Initializing Shop Suite synchronization
2025-05-14 09:40:04,278 - tzlocal - DEBUG - /etc/timezone found, contents:
 America/New_York

2025-05-14 09:40:04,278 - tzlocal - DEBUG - /etc/localtime found
2025-05-14 09:40:04,279 - tzlocal - DEBUG - 2 found:
 {'/etc/timezone': 'America/New_York', '/etc/localtime is a symlink to': 'America/New_York'}
2025-05-14 09:40:04,279 - apscheduler.scheduler - INFO - Adding job tentatively -- it will be properly scheduled when the scheduler starts
2025-05-14 09:40:04,279 - apscheduler.scheduler - INFO - Adding job tentatively -- it will be properly scheduled when the scheduler starts
2025-05-14 09:40:04,280 - apscheduler.scheduler - INFO - Added job "Process pending sync events" to job store "default"
2025-05-14 09:40:04,280 - apscheduler.scheduler - INFO - Added job "Synchronize users with suite database" to job store "default"
2025-05-14 09:40:04,280 - apscheduler.scheduler - INFO - Scheduler started
2025-05-14 09:40:04,280 - apscheduler.scheduler - DEBUG - Looking for jobs to run
2025-05-14 09:40:04,280 - sync_handler - INFO - Sync tasks registered with scheduler
2025-05-14 09:40:04,280 - apscheduler.scheduler - DEBUG - Next wakeup is due at 2025-05-14 09:45:04.279744-04:00 (in 299.998920 seconds)
2025-05-14 09:40:04,280 - main - INFO - Shop Suite synchronization tasks scheduled
2025-05-14 09:40:04,317 - root - INFO - Configuration loaded from /home/laser/Downloads/LCleanerControler-main/machine_config.json
2025-05-14 09:40:04,317 - webhook_handler - INFO - Webhook target configured: https://Shopmachinemonitor.replit.app/api/auth/webhooks
2025-05-14 09:40:04,317 - apscheduler.scheduler - INFO - Adding job tentatively -- it will be properly scheduled when the scheduler starts
2025-05-14 09:40:04,317 - apscheduler.scheduler - INFO - Added job "Retry failed webhook deliveries" to job store "default"
2025-05-14 09:40:04,317 - apscheduler.scheduler - INFO - Scheduler started
2025-05-14 09:40:04,318 - apscheduler.scheduler - DEBUG - Looking for jobs to run
2025-05-14 09:40:04,318 - webhook_handler - INFO - Webhook retry task registered with scheduler
2025-05-14 09:40:04,318 - apscheduler.scheduler - DEBUG - Next wakeup is due at 2025-05-14 09:45:04.317500-04:00 (in 299.999310 seconds)
2025-05-14 09:40:04,318 - main - INFO - Webhook retry tasks scheduled
2025-05-14 09:40:04,318 - webhook_handler - DEBUG - Sending webhook to https://Shopmachinemonitor.replit.app/api/auth/webhooks: node.status_change
2025-05-14 09:40:04,336 - urllib3.connectionpool - DEBUG - Starting new HTTPS connection (1): shopmachinemonitor.replit.app:443
2025-05-14 09:40:04,341 - main - INFO - Registered 10 API routes
2025-05-14 09:40:04,341 - main - INFO - API routes registered successfully
2025-05-14 09:40:04,342 - root - INFO - PROTOTYPE MODE: Setting FORCE_HARDWARE flag to prevent simulation fallback
2025-05-14 09:40:04,342 - app - INFO - Flask and extensions imported successfully
[2025-05-14 09:40:04 -0400] [3011] [ERROR] invalid syntax (rfid_control.py, line 554)
Traceback (most recent call last):
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/laser/Downloads/LCleanerControler-main/main.py", line 139, in <module>
    from app import *
  File "/home/laser/Downloads/LCleanerControler-main/app.py", line 62, in <module>
    from rfid_control import RFIDController
  File "/home/laser/Downloads/LCleanerControler-main/rfid_control.py", line 554
    </copilot-edited-file>  # The complete file with the suggested code changes incorporated.
    ^
SyntaxError: invalid syntax
2025-05-14 09:40:04,652 - urllib3.connectionpool - DEBUG - https://shopmachinemonitor.replit.app:443 "POST /api/auth/webhooks HTTP/1.1" 404 9
2025-05-14 09:40:04,652 - webhook_handler - WARNING - Webhook delivery failed with status 404: Not Found
^C[2025-05-14 09:42:37 -0400] [3010] [INFO] Handling signal: int
[2025-05-14 09:42:37 -0400] [3011] [INFO] Worker exiting (pid: 3011)
Traceback (most recent call last):
  File "/home/laser/Downloads/LCleanerControler-main/test_run.py", line 341, in <module>
    main()
  File "/home/laser/Downloads/LCleanerControler-main/test_run.py", line 254, in main
    subprocess.run(cmd)
  File "/usr/lib/python3.11/subprocess.py", line 550, in run
    stdout, stderr = process.communicate(input, timeout=timeout)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/subprocess.py", line 1199, in communicate
    self.wait()
  File "/usr/lib/python3.11/subprocess.py", line 1262, in wait
    return self._wait(timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/subprocess.py", line 1997, in _wait
    (pid, sts) = self._try_wait(0)
                 ^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/subprocess.py", line 1955, in _try_wait
    (pid, sts) = os.waitpid(self.pid, wait_flags)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

from HTTP
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/laser/Downloads/LCleanerControler-main/venv/lib/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/laser/Downloads/LCleanerControler-main/main.py", line 139, in <module>
    from app import *
  File "/home/laser/Downloads/LCleanerControler-main/app.py", line 62, in <module>
    from rfid_control import RFIDController
